--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -10,12 +10,12 @@
   howpublished = "ISO/IEC 19775-1.2:2008; see \url{http://web3d.org/x3d/specifications/}"
 }
 
-@misc{vrmleng:bumpmapping,
-  title = "{Bump mapping extensions}",
-  author = "Michalis Kamburelis",
-  year = "2008",
-  howpublished = "\url{http://vrmlengine.sourceforge.net/kambi\_vrml\_extensions.php#section\_ext\_bump\_mapping}"
-}
+@Comment @misc{vrmleng:bumpmapping,
+@Comment   title = "{Bump mapping extensions}",
+@Comment   author = "Michalis Kamburelis",
+@Comment   year = "2008",
+@Comment   howpublished = "\url{http://vrmlengine.sourceforge.net/kambi\_vrml\_extensions.php#section\_ext\_bump\_mapping}"
+@Comment }
 
 @misc{humus:volumetricfog,
   title = "{Volumetric Fogging 2}",
